--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -2,7 +2,7 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/focal64"
 
-  config.vm.network "public_network", ip: "192.168.1.7"
+  config.vm.network "public_network"
   config.vm.synced_folder "../ansible", "/tmp/ansible"
 
   config.vm.provider "virtualbox" do |vb|
@@ -11,9 +11,9 @@ Vagrant.configure("2") do |config|
   end
   
   config.vm.provision "shell", inline: <<-SHELL
-    apt-get update
-    apt-get install -y ansible
-    sudo ansible-playbook /tmp/ansible/playbook.yml
+  apt-get update
+  apt-get install -y ansible
+  sudo ansible-playbook /tmp/ansible/playbook.yml
   SHELL
 end
 
